tests/negative/bad13.sp
(* bad operator usage *)

main : Int () {
	b = 2 % + 2;
	return 0;
}
